--- a/style.css
+++ b/style.css
@@ -3,4 +3,33 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+a {
+	color: #808080;
+}
+h3 {
+	font-size: 15px;
+	color: #808080;
+}
 
+.headline {
+	padding: 20px 0 0 20px;
+	color: #666;
+}
+.main-visual {
+	width: 100%;
+	height: 400px;
+	background-image: url(img/mv.jpg);
+	background-size: cover;
+	background-position: bottom;
+}
+
+main {
+	width: 840px;
+	margin: 20px auto 50px;
+	/*background-color: lightblue;*/
+}
+
+section {
+	border-bottom: 1px solid #999;
+	padding: 30px 0;
+}
