--- a/style.css
+++ b/style.css
@@ -6,21 +6,17 @@
 a {
 	color: #808080;
 }
-h3 {
-	font-size: 15px;
-	color: #808080;
-}
 
-.headline {
-	padding: 20px 0 0 20px;
-	color: #666;
-}
 .main-visual {
 	width: 100%;
 	height: 400px;
 	background-image: url(img/mv.jpg);
 	background-size: cover;
 	background-position: bottom;
+}
+.headline {
+	padding: 20px 0 0 20px;
+	color: #666;
 }
 
 main {
@@ -29,7 +25,13 @@ main {
 	/*background-color: lightblue;*/
 }
 
+h2 {
+	/*font-size: 15px;*/
+	color: #808080;
+	/*padding-bottom: 5px;*/
+}
+
 .content {
-	border-bottom: 1px solid #999;
+	border-bottom: 1px solid #ccc;
 	padding: 30px 0;
 }
